# email-sender-automation

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
data/: contacts.csv  template.html
email_sender/: __init__.py  __main__.py  config.py  sender.py  template_renderer.py
email_sender_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test-sender.py  test_template_renderer.py
tests/output/: sent_log.csv
